--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,4 @@
-/* body content */
+/* Universal content */
 * {
     margin: 0px;
     padding: 0;
@@ -13,7 +13,7 @@ nav {
     margin-top: 7px;
 }
 
-#lexi-token {
+.lexi-token {
     margin-left: 45px;
     color: rgb(0, 61, 198);
     font-weight: lighter;
@@ -23,20 +23,20 @@ nav {
     cursor: pointer;
 }
 
-#learn-lex {
+.learn-lex {
     font-weight: lighter;
     cursor: pointer;
     font-size: 25px;
 }
 
-#log-in {
+.log-in {
     margin-left: 35px;
     font-weight: lighter;
     cursor: pointer;
     font-size: 25px;
 }
 
-#login-icon {
+.login-icon {
     margin-right: 25px;
     margin-top: 4px;
     margin-left: 9px;
@@ -44,7 +44,6 @@ nav {
     width: 25px;
     height: 25px;
 }
-
 /* navbar ends */
 
 /* main body starts */
@@ -53,20 +52,38 @@ main {
     border-radius: 13px;
     margin-left: 120px;
     margin-top: 50px;
+    margin-bottom: 50px;
     z-index: 20;
     border: 1px solid white;
-    background-image: url('images/home div bg img.png');
-    background-size: cover;
+    position: relative;
+    overflow-y: hidden;
+    z-index: 20;
+    box-shadow: 1px 1px 35px rgb(87, 86, 86);
+    background-attachment: fixed;
+}
+
+.wrap-img {
+    width: 100%;
+    position: absolute;
+    z-index: -3;
+}
+
+.boxes-img {
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    object-fit: cover;
 }
 
 main>h1 {
-    margin-left: 55px;
+    margin-left: 25px;
     max-width: 750px;
     font-size: 70px;
     font-weight: lighter;
     text-shadow: 1px 2px 34px black;
     color: aliceblue;
-    padding: 20px;
+    padding: 30px;
 }
 
 .highlight {
@@ -77,8 +94,8 @@ main>h1 {
 
 .sub-main {
     display: flex;
-    margin-left: 65px;
-    margin-top: 155px;
+    margin-left: 95px;
+    margin-top: 195px;
     max-width: 550px;
     padding-bottom: 190px;
     overflow: hidden;
@@ -98,7 +115,7 @@ main>h1 {
     margin-right: auto;
     padding: 10px 20px;
     border-radius: 50px;
-    font-size: 20px;
+    font-size: 25px;
     letter-spacing: 0.1rem;
     background-color: blue;
     border: none;
@@ -108,14 +125,14 @@ main>h1 {
 
 .sub-main>h4 {
     color: aliceblue;
-    font-size: 20px;
+    font-size: 23px;
     margin-top: 6px;
     letter-spacing: 0.1rem;
     cursor: pointer;
     margin-right: auto;
 }
 
-#tri-img {
+.tri-img {
     position: relative;
     width: 1080px;
     height: 1250px;
@@ -126,7 +143,7 @@ main>h1 {
     z-index: -1;
 }
 
-#square-img {
+.square-img {
     position: relative;
     bottom: 1284px;
     width: 580px;
